# Lima-camera-maxipix

./: .gitignore  CMakeLists.txt  Makefile  VERSION  pom_64_el5.xml
config/: mydet.cfg
doc/: index.rst
include/: MaxipixBufferCtrlObj.h  MaxipixCamera.h  MaxipixDet.h  MaxipixInterface.h  MaxipixReconstruction.h  MpxChipConfig.h  MpxCommon.h  MpxDacs.h  MpxDetConfig.h  MpxVersion.h  PixelArray.h  PriamAcq.h  PriamSerial.h
python/: MpxAcq.py  MpxCommon.py  MpxDacs.py  MpxDetConfig.py  __init__.py
sip/: MaxipixCamera.sip  MaxipixDet.sip  MaxipixInterface.sip  MaxipixReconstruction.sip  MpxVersion.sip  PixelArray.sip.in  PixelArray_before_4_12.sip.in  PriamAcq.sip
src/: Makefile  MaxipixCamera.cpp  MaxipixDet.cpp  MaxipixInterface.cpp  MaxipixReconstruction.cpp  MpxChipConfig.cpp  MpxCommon.cpp  MpxDacs.cpp  MpxDetConfig.cpp  PixelArray.cpp  PriamAcq.cpp  PriamSerial.cpp
test/: CMakeLists.txt  Makefile  test2.cpp  test_maxipix_acq.cpp  test_maxipix_acq.py  test_maxipix_config_reader.cpp
test/config/: tpxatl25.cfg  tpxatl25_chip_1.bpc  tpxatl25_chip_2.bpc  tpxatl25_chip_3.bpc  tpxatl25_chip_5.bpc
test/python/: maxipix_test.py
test/src/: Makefile  test.cpp  test2.cpp  test_maxipix_config_reader.cpp  test_maxipix_mydet.cpp  tpxatl25.cfg
